Change button label from 'Достижения' to 'Соревнования'

--- a/novosti.html
+++ b/novosti.html
@@ -884,7 +884,7 @@
         <div class="news-filters">
             <button class="filter-btn active" onclick="filterNews('all')">Все новости</button>
             <button class="filter-btn" onclick="filterNews('event')">Мероприятия</button>
-            <button class="filter-btn" onclick="filterNews('achievement')">Достижения</button>
+            <button class="filter-btn" onclick="filterNews('achievement')">Соревнования</button>
             <button class="filter-btn" onclick="filterNews('competition')">События</button>
             <button class="filter-btn announcements" onclick="filterNews('announcement')">📢 Анонсы предстоящих событий</button>
             <a href="mediaarhiv.html" class="filter-btn media-archive">
