--- a/novosti.html
+++ b/novosti.html
@@ -988,7 +988,7 @@
                 <div class="news-card-content">
                     <div class="news-card-meta">
                         <span class="news-card-date">📅 20 октября 2025</span>
-                        <span class="news-card-category achievement">Мероприятия</span>
+                        <span class="news-card-category achievement">Соревнования</span>
                     </div>
                     <h3 class="news-card-title">Состоялся школьный этап ВсОШ по ОБЗР</h3>
                     
@@ -1002,9 +1002,9 @@
                         <p>Победителями школьного этапа стали:</p>
                         <ul>
                             <li>Среди учеников 8-х классов - Блинова Полина (8В класс)</li>
-                            <li>>Среди учеников 9-х классов - Лазарев Андрей (9А класс)</li>
-                            <li>>Среди учеников 10 класса - Кулакова Кира</li>
-                            <li>>Среди учеников 11 класса - Белова Яна</li>
+                            <li>Среди учеников 9-х классов - Лазарев Андрей (9А класс)</li>
+                            <li>Среди учеников 10 класса - Кулакова Кира</li>
+                            <li>Среди учеников 11 класса - Белова Яна</li>
                         </ul>
                         <p>Подробную информацию о проведении олимпиады и её результатах можно узнать на странице "Олимпиады" 
                             раздела сайта "Активности" перейдя по ссылке</p>
