--- a/novosti.html
+++ b/novosti.html
@@ -1049,6 +1049,38 @@
                 </div>
             </article>
 
+              <!-- Новость 6 -->
+            <article class="news-card" data-category="event">
+                <div class="news-card-image">
+                    <span class="news-card-placeholder">🛺</span>
+                </div>
+                <div class="news-card-content">
+                    <div class="news-card-meta">
+                        <span class="news-card-date">📅 26 сентября 2025</span>
+                        <span class="news-card-category event">Мероприятия</span>
+                    </div>
+                    <h3 class="news-card-title">Экскурсия в Военное училище в Кстово</h3>
+                    <p class="news-card-excerpt">
+                     В пятницу, 26 сентября, учащиеся 8-х и 9-х классов посетили...
+                    </p>
+                     <div class="news-card-full-text">
+                        <p>В пятницу, 26 сентября, учащиеся 8-х и 9-х классов посетили Высшее военно-инженерное командное 
+                        училище Министерства обороны России в г. Кстово.</p>
+                        <p>В начале их ждали в музее учебного заведения, где подробно рассказали об истории создания, 
+                        развитии и современном оснащении техникой инженерных подразделений Российской армии. 
+                        Потом ребята посетили учебные классы, где самым интересным, конечно же, стала возможность 
+                        познакомиться с управлением современной военной техникой на симуляторах-тренажерах! 
+                        Это было очень круто! Поездка предоставила возможность почувствовать себя курсантом и 
+                        на один день погрузиться в атмосферу военного училища, оставив у девчонок и мальчишек 
+                        неизгладимые впечатления!</p>
+                    </div>
+                    <div class="news-card-footer">
+                         <button class="news-toggle-btn" onclick="toggleNews(this)">Подробнее ▼</button>
+                        <a href="https://vk.com/wall-200588316_5023" target="_blank" class="news-card-external">Эта новость в VK ↗</a>
+                    </div>
+                </div>
+            </article>
+
             <!-- Новость 5 -->
             <article class="news-card" data-category="achievement">
                 <div class="news-card-image">
