Add title to news card for event

--- a/novosti.html
+++ b/novosti.html
@@ -1091,7 +1091,7 @@
                         <span class="news-card-date">📅 21 сентября 2025</span>
                         <span class="news-card-category event">Мероприятия</span>
                     </div>
-                    <h3 class="news-card-title"></h3>
+                    <h3 class="news-card-title">День военной подготовки в стрелковом клубе «Антей»»</h3>
                     <p class="news-card-excerpt">
                    Вместе с учениками 8-х и 9-х классов посетил стрелковый клуб «Антей» в Дзержинске.
                     </p>
