--- a/novosti.html
+++ b/novosti.html
@@ -1113,14 +1113,14 @@
             </article>
          
    <!-- Новость 8 -->
-            <article class="news-card" data-category="event">
+            <article class="news-card" data-category="competition">
                 <div class="news-card-image">
                     <span class="news-card-placeholder">📚</span>
                 </div>
                 <div class="news-card-content">
                     <div class="news-card-meta">
                         <span class="news-card-date">📅 3-5 сентября 2025</span>
-                        <span class="news-card-category event">Мероприятия</span>
+                        <span class="news-card-category competition">События</span>
                     </div>
                     <h3 class="news-card-title">Практические курсы в учебном центре «Гвардеец»</h3>
                     <p class="news-card-excerpt">
