--- a/metodika.html
+++ b/metodika.html
@@ -815,7 +815,7 @@
                     <li>Варианты объяснения теории, вопросы для обсуждения и проблемные ситуации</li>
                     <li>Практические задания, тренинговые упражнения и разбор типичных ЧС</li>
                 </ul>
-                <a href="detalnaya-stranica-3.html" class="info-block-button">Подробнее</a>
+                <a href="konspekty-urokov.html" class="info-block-button">Подробнее</a>
             </div>
 
             <!-- БЛОК 3 (светлый фон - альтернатива) -->
@@ -1559,6 +1559,7 @@ window.addEventListener('load', () => {
 
 
          
+
 
 
 
