Update fmt.Println to output 'Goodbye World'

--- a/metodika.html
+++ b/metodika.html
@@ -830,7 +830,7 @@
                     <li>Материалы для объяснения и закрепления ключевых тем</li>
                     <li>Тесты для текущего контроля и итоговые работы</li>
                 </ul>
-                <a href="detalnaya-stranica-4.html" class="info-block-button">Подробнее</a>
+                <a href="prezentacii-testy.html" class="info-block-button">Подробнее</a>
             </div>
 
             </div>
@@ -1559,6 +1559,7 @@ window.addEventListener('load', () => {
 
 
          
+
 
 
 
