Improve formatting of presentation materials section
Reformatted text for better readability and clarity.

--- a/prezentacii-testy.html
+++ b/prezentacii-testy.html
@@ -1374,11 +1374,13 @@
         <div class="highlight-box">
             <h3>💡 Хотите создавать такие материалы сами?</h3>
             <p>
-                Все эти презентации, тесты и наглядные материалы были созданы с помощью <strong>бесплатных ИИ-инструментов</strong> менее чем за 30 минут каждый.
+                Все эти презентации, тесты и наглядные материалы были созданы с помощью<br>
+                <strong> ИИ-инструментов</strong> менее чем за 30 минут каждый.
             </p>
             <p style="margin-top: 1.5rem;">
                 <strong>Узнайте, как это сделать:</strong><br>
-                Перейдите в раздел <a href="ai-projects.html">«ИИ в образовании → Для коллег»</a>, где я подробно рассказываю о методике создания образовательного контента с помощью ИИ.
+                Перейдите в раздел <a href="ai-projects.html">«ИИ в образовании → Для коллег»</a>, <br>
+                где я подробно рассказываю о методике создания образовательного контента с помощью ИИ.
             </p>
             <p style="margin-top: 1rem; font-size: 0.95rem; opacity: 0.9;">
                 🎯 <strong>Gamma App</strong> для презентаций • <strong>DALL-E 3</strong> для инфографики • <strong>Claude</strong> для тестов
