Update test link to use relative path

--- a/prezentacii-testy.html
+++ b/prezentacii-testy.html
@@ -1236,7 +1236,7 @@
                                     <div class="material-info-item">📊 Тип: Интерактивный с автопроверкой</div>
                                 </div>
                                 <div class="material-buttons">
-                                    <a href="test-first-aid-module8.html" target="_blank" class="material-btn material-btn-primary">▶️ Пройти тест</a>
+                                    <a href="tests/test-first-aid-module8.html" target="_blank" class="material-btn material-btn-primary">▶️ Пройти тест</a>
                                     <button class="material-btn material-btn-secondary" onclick="window.open('test-first-aid-module8.html', '_blank')">🔗 Открыть в новой вкладке</button>
                                 </div>
                             </div>
