--- a/ai-projects.html
+++ b/ai-projects.html
@@ -815,7 +815,7 @@
                     <li>📋 Рекомендации по домашней подготовке</li>
                     <li>🧠 Инфографика по цифровой безопасности подростков</li>
                 </ul>
-                <a href="detalnaya-stranica-3.html" class="info-block-button">Подробнее</a>
+                <a href="ai-dlya-roditelej.html" class="info-block-button">Подробнее</a>
             </div>
 
             <!-- БЛОК 3 (светлый фон - альтернатива) -->
@@ -1592,6 +1592,7 @@ window.addEventListener('load', () => {
 
 
          
+
 
 
 
