--- a/ai-projects.html
+++ b/ai-projects.html
@@ -686,8 +686,8 @@
                     <li class="has-submenu">
                         <a href="index.html" onclick="return handleSubmenuClick(event, this)">Главная</a>
                         <ul class="submenu">
-                            <li><a href="o-predmete-obzr.html">О предмете ОБЗР</a></li>
-                            <li><a href="novosti.html">Последние новости</a></li>
+                            <li><a href="o-predmete-obzr">О предмете ОБЗР</a></li>
+                            <li><a href="novosti">Последние новости</a></li>
                         </ul>
                     </li>
 
@@ -725,8 +725,8 @@
                         <ul class="submenu">
                             <li><a href="ai-dlya-uchenikov">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-dlya-roditelej">Для родителей - практические материалы</a></li>
-                            <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-projects.html#ai-poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
+                            <li><a href="ai-dlya-kolleg">Для коллег - методические материалы</a></li>
+                            <li><a href="ai-resursy">Полезные ресурсы по ИИ в образовании</a></li>
                         </ul>
                     </li>
 
@@ -1592,6 +1592,7 @@ window.addEventListener('load', () => {
 
 
          
+
 
 
 
