--- a/ai-projects.html
+++ b/ai-projects.html
@@ -990,6 +990,24 @@
                     </div>
                 </div>
             </div>
+
+ <!-- ДОБАВЬТЕ ЭТУ КНОПКУ ПЕРЕД ЗАКРЫВАЮЩИМ </div> -->
+    <a href="ai-poleznye-resursy" 
+       class="info-block-button" 
+       style="display: inline-block;
+              padding: 0.75rem 1.5rem;
+              background-color: white;
+              color: #7B68EE;
+              text-decoration: none;
+              border-radius: 6px;
+              font-weight: 600;
+              transition: all 0.3s ease;
+              box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+              margin-top: 1rem;">
+        Подробнее
+    </a>
+    
+</div>      
         </div>
 
     </main>
@@ -1592,6 +1610,7 @@ window.addEventListener('load', () => {
 
 
          
+
 
 
 
