--- a/ai-projects.html
+++ b/ai-projects.html
@@ -992,7 +992,7 @@
             </div>
 
  <!-- ДОБАВЬТЕ ЭТУ КНОПКУ ПЕРЕД ЗАКРЫВАЮЩИМ </div> -->
-    <a href="ai-poleznye-resursy" 
+    <a href="ai-resursy" 
        class="info-block-button" 
        style="display: inline-block;
               padding: 0.75rem 1.5rem;
@@ -1610,6 +1610,7 @@ window.addEventListener('load', () => {
 
 
          
+
 
 
 
