--- a/documents.html
+++ b/documents.html
@@ -1266,7 +1266,7 @@
         <div class="download-all-section">
             <h3>📦 Скачать полное портфолио</h3>
             <p>ZIP-архив (45 МБ) со всеми документами для аттестационной комиссии</p>
-            <a href="documents/portfolio-full.zip" class="download-all-btn" download>
+            <a href="documents/portfolio-full.rar" class="download-all-btn" download>
                 <span style="font-size: 1.5rem;">📥</span>
                 Скачать портфолио.zip
             </a>
@@ -1300,7 +1300,7 @@
                                     <td>
                                         <div class="doc-name">
                                             <span class="doc-icon">📄</span>
-                                            <span>Справка о наличии персонального сайта</span>
+                                            <span>Справка о работе преподавателя</span>
                                         </div>
                                     </td>
                                     <td class="doc-date">20.11.2025</td>
@@ -1308,7 +1308,7 @@
                                         <button class="btn btn-view" onclick="viewDocument('documents/spravka-sayt.pdf', 'Справка о наличии персонального сайта')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/spravka-sayt.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/spravka-o-rabote-prepodavatelya.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1320,12 +1320,12 @@
                                             <span>Справка о результатах освоения ОБЗР обучающимися</span>
                                         </div>
                                     </td>
-                                    <td class="doc-date">15.11.2025</td>
+                                    <td class="doc-date">20.11.2025</td>
                                     <td class="doc-actions">
                                         <button class="btn btn-view" onclick="viewDocument('documents/spravka-rezultaty.pdf', 'Справка о результатах освоения ОБЗР')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/spravka-rezultaty.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/spravka-ob-uspevaemosti.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1337,12 +1337,12 @@
                                             <span>Справка об участии обучающихся в олимпиадах, конкурсах</span>
                                         </div>
                                     </td>
-                                    <td class="doc-date">10.11.2025</td>
+                                    <td class="doc-date">20.11.2025</td>
                                     <td class="doc-actions">
                                         <button class="btn btn-view" onclick="viewDocument('documents/spravka-olimpiady.pdf', 'Справка об участии в олимпиадах')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/spravka-olimpiady.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/spravka-olimpiady" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1351,15 +1351,32 @@
                                     <td>
                                         <div class="doc-name">
                                             <span class="doc-icon">🎓</span>
-                                            <span>Справка о проведении открытых уроков, мастер-классов</span>
+                                            <span>Справка об использовании преподавателем электронных ресурсов</span>
                                         </div>
                                     </td>
-                                    <td class="doc-date">05.11.2025</td>
+                                    <td class="doc-date">20.11.2025</td>
                                     <td class="doc-actions">
                                         <button class="btn btn-view" onclick="viewDocument('documents/spravka-uroki.pdf', 'Справка о проведении открытых уроков')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/spravka-uroki.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/spravka-ob-ispolzovanii-elektronnyh-resursov.pdf" class="btn btn-download" download>
+                                            📥 Скачать
+                                        </a>
+                                    </td>
+                                </tr>
+                                 <tr>
+                                    <td>
+                                        <div class="doc-name">
+                                            <span class="doc-icon">⭐</span>
+                                            <span>Справка о руководсте отрядом Юнармии и ЮИД</span>
+                                        </div>
+                                    </td>
+                                    <td class="doc-date">20.11.2025</td>
+                                    <td class="doc-actions">
+                                        <button class="btn btn-view" onclick="viewDocument('documents/spravka-rezultaty.pdf', 'Справка о результатах освоения ОБЗР')">
+                                            👁️ Просмотр
+                                        </button>
+                                        <a href="porfolio/spravka-o-rukovodstve-eunarmiyey-i-yuid.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1368,15 +1385,15 @@
                                     <td>
                                         <div class="doc-name">
                                             <span class="doc-icon">🗣️</span>
-                                            <span>Справка об участии в РМО, педсоветах, конференциях</span>
+                                            <span>Спрака об участии в социальных проектах</span>
                                         </div>
                                     </td>
-                                    <td class="doc-date">01.11.2025</td>
+                                    <td class="doc-date">20.11.2025</td>
                                     <td class="doc-actions">
                                         <button class="btn btn-view" onclick="viewDocument('documents/spravka-rmo.pdf', 'Справка об участии в РМО')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/spravka-rmo.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/spravka-ob-uchastii-v-socialnyh-proektah.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
