--- a/documents.html
+++ b/documents.html
@@ -1281,7 +1281,7 @@
                     <div class="accordion-title">
                         <span class="accordion-icon">📝</span>
                         <span>Справки для аттестации</span>
-                        <span class="accordion-badge">5 документов</span>
+                        <span class="accordion-badge">6 документов</span>
                     </div>
                     <span class="accordion-arrow">▼</span>
                 </div>
@@ -1305,7 +1305,7 @@
                                     </td>
                                     <td class="doc-date">20.11.2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/spravka-sayt.pdf', 'Справка о наличии персонального сайта')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/spravka-o-rabote-prepodavatelya.pdf', 'Справка о работе преподавателя')">
                                             👁️ Просмотр
                                         </button>
                                         <a href="porfolio/spravka-o-rabote-prepodavatelya.pdf" class="btn btn-download" download>
@@ -1322,7 +1322,7 @@
                                     </td>
                                     <td class="doc-date">20.11.2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/spravka-rezultaty.pdf', 'Справка о результатах освоения ОБЗР')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/spravka-ob-uspevaemosti.pdf', 'Справка о результатах освоения ОБЗР')">
                                             👁️ Просмотр
                                         </button>
                                         <a href="porfolio/spravka-ob-uspevaemosti.pdf" class="btn btn-download" download>
@@ -1339,7 +1339,7 @@
                                     </td>
                                     <td class="doc-date">20.11.2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/spravka-olimpiady.pdf', 'Справка об участии в олимпиадах')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/spravka-olimpiady.pdf', 'Справка об участии обучающихся в олимпиадах, конкурсах')">
                                             👁️ Просмотр
                                         </button>
                                         <a href="porfolio/spravka-olimpiady" class="btn btn-download" download>
@@ -1356,7 +1356,7 @@
                                     </td>
                                     <td class="doc-date">20.11.2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/spravka-uroki.pdf', 'Справка о проведении открытых уроков')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/spravka-ob-ispolzovanii-elektronnyh-resursov.pdf', 'Справка об использовании преподавателем электронных ресурсов')">
                                             👁️ Просмотр
                                         </button>
                                         <a href="porfolio/spravka-ob-ispolzovanii-elektronnyh-resursov.pdf" class="btn btn-download" download>
@@ -1368,12 +1368,12 @@
                                     <td>
                                         <div class="doc-name">
                                             <span class="doc-icon">⭐</span>
-                                            <span>Справка о руководсте отрядом Юнармии и ЮИД</span>
+                                            <span>Справка о руководсте отрядами Юнармии и ЮИД</span>
                                         </div>
                                     </td>
                                     <td class="doc-date">20.11.2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/spravka-rezultaty.pdf', 'Справка о результатах освоения ОБЗР')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/spravka-o-rukovodstve-eunarmiyey-i-yuid.pdf', 'Справка о руководсте отрядами Юнармии и ЮИД')">
                                             👁️ Просмотр
                                         </button>
                                         <a href="porfolio/spravka-o-rukovodstve-eunarmiyey-i-yuid.pdf" class="btn btn-download" download>
@@ -1390,7 +1390,7 @@
                                     </td>
                                     <td class="doc-date">20.11.2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/spravka-rmo.pdf', 'Справка об участии в РМО')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/spravka-ob-uchastii-v-socialnyh-proektah.pdf', 'Спрака об участии в социальных проектах')">
                                             👁️ Просмотр
                                         </button>
                                         <a href="porfolio/spravka-ob-uchastii-v-socialnyh-proektah.pdf" class="btn btn-download" download>
