--- a/documents.html
+++ b/documents.html
@@ -1237,7 +1237,6 @@
             <ul>
                 <li>✅ Заверены печатью и подписью директора МБОУ СШ № 2 г. Лысково</li>
                 <li>✅ Соответствуют требованиям Приказа Минпросвещения РФ от 24.03.2023 № 196</li>
-                <li>✅ Содержат только обезличенные данные обучающихся (ФЗ-152)</li>
                 <li>✅ Актуальны на 2024-2025 учебный год</li>
             </ul>
         </div>
@@ -1434,7 +1433,7 @@
                                     </td>
                                     <td class="doc-date">2001</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/diplom-vuz.pdf', 'Диплом о высшем образовании')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/diplom-vuz-1.pdf porfolio/diplom-vuz-2.pdf', 'Диплом о высшем образовании')">
                                             👁️ Просмотр
                                         </button>
                                         <a href="documents/diplom-vuz.pdf" class="btn btn-download" download>
