--- a/documents.html
+++ b/documents.html
@@ -1264,10 +1264,10 @@
         <!-- Кнопка скачать всё портфолио -->
         <div class="download-all-section">
             <h3>📦 Скачать полное портфолио</h3>
-            <p>ZIP-архив (45 МБ) со всеми документами для аттестационной комиссии</p>
+            <p>RAR-архив (9 МБ) со всеми документами для аттестационной комиссии</p>
             <a href="documents/portfolio-full.rar" class="download-all-btn" download>
                 <span style="font-size: 1.5rem;">📥</span>
-                Скачать портфолио.zip
+                Скачать портфолио.rar
             </a>
         </div>
 
