--- a/documents.html
+++ b/documents.html
@@ -1433,10 +1433,10 @@
                                     </td>
                                     <td class="doc-date">2001</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('porfolio/diplom-vuz-1.pdf porfolio/diplom-vuz-2.pdf', 'Диплом о высшем образовании')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/diplom-vuz-1.pdf', 'Диплом о высшем образовании')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/diplom-vuz.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/diplom-vuz-2.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1450,10 +1450,10 @@
                                     </td>
                                     <td class="doc-date">2023</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/diplom-perepodgotovka.pdf', 'Диплом о переподготовке')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/diplom-perepodgotovka.pdf', 'Диплом о профессиональной переподготовке по программе: "Педагогическое образование: учитель ОБЖ"')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/diplom-perepodgotovka.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/diplom-perepodgotovka.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
