--- a/documents.html
+++ b/documents.html
@@ -1265,7 +1265,7 @@
         <div class="download-all-section">
             <h3>📦 Скачать полное портфолио</h3>
             <p>RAR-архив (9 МБ) со всеми документами для аттестационной комиссии</p>
-            <a href="documents/portfolio-full.rar" class="download-all-btn" download>
+            <a href="porfolio/portfolio-full.rar" class="download-all-btn" download>
                 <span style="font-size: 1.5rem;">📥</span>
                 Скачать портфолио.rar
             </a>
@@ -1433,7 +1433,7 @@
                                     </td>
                                     <td class="doc-date">2001</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('porfolio/diplom-vuz-1.pdf', 'Диплом о высшем образовании')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/diplom-vuz-2.pdf', 'Диплом о высшем образовании')">
                                             👁️ Просмотр
                                         </button>
                                         <a href="porfolio/diplom-vuz-2.pdf" class="btn btn-download" download>
@@ -1450,7 +1450,7 @@
                                     </td>
                                     <td class="doc-date">2023</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('porfolio/diplom-perepodgotovka.pdf', 'Диплом о профессиональной переподготовке по программе: "Педагогическое образование: учитель ОБЖ"')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/diplom-perepodgotovka.pdf', 'Диплом о профессиональной переподготовке')">
                                             👁️ Просмотр
                                         </button>
                                         <a href="porfolio/diplom-perepodgotovka.pdf" class="btn btn-download" download>
