--- a/documents.html
+++ b/documents.html
@@ -1237,7 +1237,7 @@
             <ul>
                 <li>✅ Заверены печатью и подписью директора МБОУ СШ № 2 г. Лысково</li>
                 <li>✅ Соответствуют требованиям Приказа Минпросвещения РФ от 24.03.2023 № 196</li>
-                <li>✅ Актуальны на 2024-2025 учебный год</li>
+                <li>✅ Актуальны на 2025-2026 учебный год</li>
             </ul>
         </div>
 
@@ -1428,7 +1428,7 @@
                                     <td>
                                         <div class="doc-name">
                                             <span class="doc-icon">🎓</span>
-                                            <span>Диплом о высшем образовании (Нижегородская академия МВД)</span>
+                                            <span>Диплом о высшем образовании (Нижегородская академия МВД России)</span>
                                         </div>
                                     </td>
                                     <td class="doc-date">2001</td>
@@ -1445,7 +1445,7 @@
                                     <td>
                                         <div class="doc-name">
                                             <span class="doc-icon">📜</span>
-                                            <span>Диплом о профессиональной переподготовке (ООО "Импульс")</span>
+                                            <span>Диплом о профессиональной переподготовке (Учитель ОБЖ)</span>
                                         </div>
                                     </td>
                                     <td class="doc-date">2023</td>
@@ -1462,15 +1462,49 @@
                                     <td>
                                         <div class="doc-name">
                                             <span class="doc-icon">📚</span>
-                                            <span>Удостоверение о повышении квалификации (НИРО, ОБЗР)</span>
+                                            <span>Удостоверение о повышении квалификации (НВП)</span>
                                         </div>
                                     </td>
-                                    <td class="doc-date">2025</td>
+                                     <td class="doc-date">2023</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/udostoverenie-pk-niro.pdf', 'Удостоверение ПК НИРО')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye (nvp).pdf', 'Удостоверение о повышении квалификации')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/udostoverenie-pk-niro.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/udostovereniye (nvp).pdf" class="btn btn-download" download>
+                                            📥 Скачать
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="doc-name">
+                                            <span class="doc-icon">📚</span>
+                                            <span>Удостоверение о повышении квалификации (ОВЗ)</span>
+                                        </div>
+                                    </td>
+                                     <td class="doc-date">2023</td>
+                                    <td class="doc-actions">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye (ovz).pdf', 'Диплом о профессиональной переподготовке')">
+                                            👁️ Просмотр
+                                        </button>
+                                        <a href="porfolio/udostovereniye (ovz).pdf" class="btn btn-download" download>
+                                            📥 Скачать
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="doc-name">
+                                            <span class="doc-icon">📚</span>
+                                            <span>Удостоверение о повышении квалификации (НВП)</span>
+                                        </div>
+                                    </td>
+                                    <td class="doc-date">2023</td>
+                                    <td class="doc-actions">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye (nvp).pdf', 'Удостоверение ПК НИРО')">
+                                            👁️ Просмотр
+                                        </button>
+                                        <a href="porfolio/udostovereniye (nvp).pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
