--- a/documents.html
+++ b/documents.html
@@ -1467,10 +1467,10 @@
                                     </td>
                                      <td class="doc-date">2023</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye (nvp).pdf', 'Удостоверение о повышении квалификации')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye-nvp.pdf', 'Удостоверение о повышении квалификации')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="porfolio/udostovereniye (nvp).pdf" class="btn btn-download" download>
+                                        <a href="porfolio/udostovereniye-nvp.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1482,12 +1482,12 @@
                                             <span>Удостоверение о повышении квалификации (ОВЗ)</span>
                                         </div>
                                     </td>
-                                     <td class="doc-date">2023</td>
+                                     <td class="doc-date">2024</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye (ovz).pdf', 'Диплом о профессиональной переподготовке')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye-ovz.pdf', 'Удостоверение о повышении квалификации')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="porfolio/udostovereniye (ovz).pdf" class="btn btn-download" download>
+                                        <a href="porfolio/udostovereniye-ovz.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1496,15 +1496,32 @@
                                     <td>
                                         <div class="doc-name">
                                             <span class="doc-icon">📚</span>
-                                            <span>Удостоверение о повышении квалификации (НВП)</span>
+                                            <span>Удостоверение о повышении квалификации по ОБЗР (Импульс)</span>
                                         </div>
                                     </td>
-                                    <td class="doc-date">2023</td>
+                                    <td class="doc-date">2024</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye (nvp).pdf', 'Удостоверение ПК НИРО')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye-obzr-impuls.pdf', 'Удостоверение о повышении квалификации')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="porfolio/udostovereniye (nvp).pdf" class="btn btn-download" download>
+                                        <a href="porfolio/udostovereniye-obzr-impuls.pdf" class="btn btn-download" download>
+                                            📥 Скачать
+                                        </a>
+                                    </td>
+                                </tr>
+                                 <tr>
+                                    <td>
+                                        <div class="doc-name">
+                                            <span class="doc-icon">📚</span>
+                                            <span>Удостоверение о повышении квалификации по ОБЗР (ГУП)</span>
+                                        </div>
+                                    </td>
+                                     <td class="doc-date">2024</td>
+                                    <td class="doc-actions">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye-obzr-niro', 'Удостоверение о повышении квалификации')">
+                                            👁️ Просмотр
+                                        </button>
+                                        <a href="porfolio/udostovereniye-obzr-niro" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1512,16 +1529,16 @@
                                 <tr>
                                     <td>
                                         <div class="doc-name">
-                                            <span class="doc-icon">📄</span>
-                                            <span>Справка о трудовом и педагогическом стаже</span>
+                                            <span class="doc-icon">📚</span>
+                                            <span>Удостоверение о повышении квалификации по ОБЗР (практика НИРО)</span>
                                         </div>
                                     </td>
                                     <td class="doc-date">25.11.2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/spravka-stazh.pdf', 'Справка о стаже')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye-obzr-praktika.pdf', 'Удостоверение о повышении квалификации')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/spravka-stazh.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/udostovereniye-obzr-praktika.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
