--- a/documents.html
+++ b/documents.html
@@ -1265,7 +1265,7 @@
         <div class="download-all-section">
             <h3>📦 Скачать полное портфолио</h3>
             <p>RAR-архив (9 МБ) со всеми документами для аттестационной комиссии</p>
-            <a href="porfolio/portfolio-full.rar" class="download-all-btn" download>
+            <a href="porfolio/documentsportfolio-full.rar" class="download-all-btn" download>
                 <span style="font-size: 1.5rem;">📥</span>
                 Скачать портфолио.rar
             </a>
@@ -1409,7 +1409,7 @@
                     <div class="accordion-title">
                         <span class="accordion-icon">🎓</span>
                         <span>Дипломы и сертификаты образования</span>
-                        <span class="accordion-badge">4 документа</span>
+                        <span class="accordion-badge">7 документов</span>
                     </div>
                     <span class="accordion-arrow">▼</span>
                 </div>
@@ -1533,7 +1533,7 @@
                                             <span>Удостоверение о повышении квалификации по ОБЗР (практика НИРО)</span>
                                         </div>
                                     </td>
-                                    <td class="doc-date">25.11.2025</td>
+                                    <td class="doc-date">2025</td>
                                     <td class="doc-actions">
                                         <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye-obzr-praktika.pdf', 'Удостоверение о повышении квалификации')">
                                             👁️ Просмотр
@@ -1573,16 +1573,16 @@
                                 <tr>
                                     <td>
                                         <div class="doc-name">
-                                            <span class="doc-icon">🎖️</span>
+                                            <span class="doc-icon">⭐</span>
                                             <span>Благодарственное письмо УЦПВ ПФО "Гвардеец"</span>
                                         </div>
                                     </td>
                                     <td class="doc-date">2023</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/blagodarnoe-gvardeec.pdf', 'Благодарственное письмо Гвардеец')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/blagodarnoe-gvardeec.pdf', 'Благодарственное письмо УЦПВ ПФО Гвардеец')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/blagodarnoe-gvardeec.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/blagodarnoe-gvardeec.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1594,12 +1594,12 @@
                                             <span>Почётная грамота Управления образования Лысковского МО</span>
                                         </div>
                                     </td>
-                                    <td class="doc-date">2024</td>
+                                    <td class="doc-date">2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/gramota-upravlenie.pdf', 'Почётная грамота УО')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/gramota-upravlenie.pdf', 'Почётная грамота УО')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/gramota-upravlenie.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/gramota-upravlenie.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1608,15 +1608,15 @@
                                     <td>
                                         <div class="doc-name">
                                             <span class="doc-icon">⭐</span>
-                                            <span>Грамота за организацию Юнармейского движения</span>
+                                            <span>Грамота за II место в общем зачёте муниципального этапа игры "Нижегородская зарница"</span>
                                         </div>
                                     </td>
                                     <td class="doc-date">2024</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/gramota-yunarmiya.pdf', 'Грамота Юнармия')">
+                                        <button class="btn btn-view" onclick="viewDocument('images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg', 'Грамота Юнармия')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/gramota-yunarmiya.pdf" class="btn btn-download" download>
+                                        <a href="images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
